Ajusta paleta para visual sóbrio e melhora contraste no diff

--- a/index.html
+++ b/index.html
@@ -6,40 +6,48 @@
   <title>Protótipo de Auditoria de Documentos</title>
   <style>
     :root {
-      --bg: radial-gradient(circle at 15% 10%, #192b52 0%, #0b1220 42%, #060912 100%);
-      --panel: rgba(12, 24, 46, 0.88);
-      --text: #e2ecff;
-      --muted: #95a3bd;
-      --surface-1: rgba(9, 19, 37, 0.75);
-      --surface-2: rgba(9, 18, 35, 0.9);
-      --surface-3: rgba(8, 17, 33, 0.74);
-      --surface-4: rgba(5, 10, 20, 0.7);
-      --table-head: rgba(11, 23, 44, 0.98);
-      --primary: #26c6ff;
-      --primary-soft: rgba(38, 198, 255, 0.15);
-      --secondary: #a855f7;
-      --accent: #22d3ee;
-      --border: rgba(124, 169, 255, 0.22);
-      --chip-bg: rgba(168, 85, 247, 0.16);
-      --chip-text: #e9d5ff;
+      --bg: #10192d;
+      --panel: #17243d;
+      --text: #e4ebf7;
+      --muted: #9aaac4;
+      --surface-1: #16243d;
+      --surface-2: #1b2a45;
+      --surface-3: #15223a;
+      --surface-4: #111b30;
+      --table-head: #1d2d4a;
+      --primary: #5a7fc8;
+      --primary-soft: rgba(90, 127, 200, 0.2);
+      --secondary: #5a7fc8;
+      --accent: #6d8fd3;
+      --border: rgba(149, 174, 220, 0.3);
+      --chip-bg: rgba(109, 143, 211, 0.2);
+      --chip-text: #d7e3fb;
+      --ins-bg: #d9f3e6;
+      --ins-text: #1f5139;
+      --del-bg: #f9d9df;
+      --del-text: #7f1d2d;
       --shadow: 0 14px 32px rgba(1, 6, 20, 0.45);
       --radius: 14px;
     }
 
     :root[data-theme="light"] {
-      --bg: radial-gradient(circle at 15% 10%, #f7fbff 0%, #e8f0ff 45%, #dbe7ff 100%);
-      --panel: rgba(255, 255, 255, 0.88);
+      --bg: #eef2f8;
+      --panel: #f8fafc;
       --text: #0f172a;
       --muted: #475569;
-      --surface-1: rgba(255, 255, 255, 0.78);
-      --surface-2: rgba(255, 255, 255, 0.96);
-      --surface-3: rgba(255, 255, 255, 0.92);
-      --surface-4: rgba(255, 255, 255, 0.85);
-      --table-head: rgba(240, 247, 255, 0.98);
-      --border: rgba(71, 112, 204, 0.28);
-      --chip-bg: rgba(147, 51, 234, 0.12);
-      --chip-text: #6b21a8;
-      --primary-soft: rgba(37, 99, 235, 0.12);
+      --surface-1: #ffffff;
+      --surface-2: #ffffff;
+      --surface-3: #f8fafc;
+      --surface-4: #f1f5f9;
+      --table-head: #eef2f7;
+      --border: rgba(100, 116, 139, 0.35);
+      --chip-bg: rgba(90, 127, 200, 0.14);
+      --chip-text: #2f4775;
+      --primary-soft: rgba(90, 127, 200, 0.16);
+      --ins-bg: #d9f3e6;
+      --ins-text: #1f5139;
+      --del-bg: #f9d9df;
+      --del-text: #7f1d2d;
       --shadow: 0 14px 32px rgba(15, 23, 42, 0.16);
     }
     * { box-sizing: border-box; }
@@ -135,9 +143,9 @@
       transition: 0.2s ease;
     }
     button.primary {
-      background: linear-gradient(120deg, var(--primary), var(--secondary));
-      border-color: transparent;
-      color: #08101f;
+      background: var(--primary);
+      border-color: var(--primary);
+      color: #f8fafc;
     }
     button.primary:hover { filter: brightness(1.1); }
     button.ghost:hover { background: rgba(38, 198, 255, 0.12); }
@@ -357,8 +365,8 @@
       font-size: 0.82rem;
     }
     .legend { font-size: .78rem; color: var(--muted); }
-        .ins { background: rgba(52, 211, 153, 0.22); color: #6ee7b7; padding: 1px 3px; border-radius: 4px; }
-    .del { background: rgba(251, 113, 133, 0.22); color: #fda4af; text-decoration: line-through; padding: 1px 3px; border-radius: 4px; }
+    .ins { background: var(--ins-bg); color: var(--ins-text); padding: 1px 3px; border-radius: 4px; }
+    .del { background: var(--del-bg); color: var(--del-text); text-decoration: line-through; padding: 1px 3px; border-radius: 4px; }
 
     .tutorial-overlay {
       position: fixed;
